--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -12,11 +12,11 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   frontend:
-    build: ../frontend
+    image: antonzemtsov/foodgram-frontend
     volumes:
       - ../frontend/:/app/result_build/
   backend:
-    build: ../backend
+    image: antonzemtsov/foodgram-backend
     env_file: ../.env
     volumes:
       - static:/app/static/
@@ -29,7 +29,7 @@ services:
       - backend
       - frontend
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
