--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -15,7 +15,7 @@ server {
     }
 
      location /static/rest_framework/ {
-        root /var/html/;
+        root /var/html;
     }
 
     location /admin/ {
