--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,6 +102,8 @@ jobs:
           sudo docker compose -f docker-compose.production.yml down
           sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/foodgram-backend
           sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend
+          sudo docker image rm nginx
+          sudo docker image rm postgres
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
