--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,8 +102,8 @@ jobs:
           sudo docker compose -f docker-compose.production.yml down
           sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/foodgram-backend
           sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend
-          sudo docker image rm nginx
-          sudo docker image rm postgres
+          sudo docker image rm nginx:1.19.3
+          sudo docker image rm postgres:13
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
