--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -2,6 +2,7 @@ version: '3.3'
 
 volumes:
   static:
+  backend_static:
   media:
   pg_data:
 
@@ -34,5 +35,5 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static
-      - media:/var/html/media
+      - backend_static:/backend_static
+      - media:/media
