--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -6,20 +6,18 @@ server {
 
     client_max_body_size 20M;
 
+    location /backend_static/ {
+        alias /backend_static/;
+    }
+
     location /media/ {
-      root /var/html;
-    }
-
-    location /static/admin/ {
-        root /var/html;
-    }
-
-     location /static/rest_framework/ {
-        root /var/html;
+        alias /media/;
     }
 
     location /admin/ {
       proxy_set_header Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-Proto $scheme;
       proxy_pass http://backend:8080/admin/;
     }
 
@@ -30,9 +28,9 @@ server {
 
     location /api/ {
       proxy_set_header Host $host;
-      proxy_set_header        X-Forwarded-Host $host;
-      proxy_set_header        X-Forwarded-Server $host;
-      proxy_pass http://backend:8080;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-Proto $scheme;
+      proxy_pass http://backend:8080/api/;
     }
 
     location / {
