--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -3,7 +3,7 @@ version: '3.3'
 volumes:
   static:
   backend_static:
-  media:
+  backend_media:
   pg_data:
 
 services:
@@ -15,13 +15,13 @@ services:
   frontend:
     image: antonzemtsov/foodgram-frontend
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/app/result_build/build
   backend:
     image: antonzemtsov/foodgram-backend
     env_file: ../.env
     volumes:
-      - static:/app/static/
-      - media:/app/media/
+      - backend_static:/app/static
+      - backend_media:/app/media
     depends_on:
       - db
   nginx:
@@ -33,7 +33,7 @@ services:
       - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
+      - static:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
       - backend_static:/backend_static
-      - media:/media
+      - backend_media:/backend_media
