--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,8 +9,8 @@ server {
         alias /backend_static/;
     }
 
-    location /media/ {
-        alias /media/;
+    location /backend_media/ {
+        alias /backend_media/;
     }
 
     location /admin/ {
