--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,32 +1,32 @@
 version: '3.3'
 
-volumes:
-  static:
-  media:
-  pg_data:
+#volumes:
+#  static:
+#  media:
+#  pg_data:
 
 services:
-  db:
-    image: postgres:13
-    env_file: ../.env
-    volumes:
-      - pg_data:/var/lib/postgresql/data
+#  db:
+#    image: postgres:13
+#    env_file: ../.env
+#    volumes:
+#      - pg_data:/var/lib/postgresql/data
   frontend:
     build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
-  backend:
-    build: ../backend
-    env_file: ../.env
-    volumes:
-      - static:/app/static/
-      - media:/app/media/
-    depends_on:
-      - db
+#  backend:
+#    build: ../backend
+#    env_file: ../.env
+#    volumes:
+#      - static:/app/static/
+#      - media:/app/media/
+#    depends_on:
+#      - db
   nginx:
     image: nginx:1.19.3
     depends_on:
-      - backend
+#      - backend
       - frontend
     ports:
       - "80:80"
@@ -34,5 +34,5 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static:/var/html/static
-      - media:/var/html/media
+#      - static:/var/html/static
+#      - media:/var/html/media
